deploy/retrieveUnpackaged/objects/SFDC_Acct_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Other_Challenges__c</fullName>
        <inlineHelpText>Please describe any other challenges or goals regarding data center and/or end user computing.</inlineHelpText>
        <label>Other Challenges</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overview_of_Support_Environment__c</fullName>
        <label>Overview of Support Environment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_History__c</fullName>
        <label>Payment History</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension Notices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Account_Sales_Goal__c</fullName>
        <formula>Plan_FY_Product_Sales_Goal__c  +  Plan_FY_Services_Sales_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan FY Account Sales Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Product_Sales_Goal__c</fullName>
        <label>Plan FY Product Sales Goal</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Services_Sales_Goal__c</fullName>
        <label>Plan FY Services Sales Goal</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Upcoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planning_Year__c</fullName>
        <label>Planning Year</label>
        <picklist>
            <picklistValues>
                <fullName>FY2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2010</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Positioned_to_capture_more_business__c</fullName>
        <inlineHelpText>Are we in positioned to capture more of their business in the future?</inlineHelpText>
        <label>Positioned to capture more business</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Barriers__c</fullName>
        <label>Potential Barriers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Hosting_company__c</fullName>
        <inlineHelpText>Which Hosting company did they come from. Ensure you select the account type &quot;competitor&quot;</inlineHelpText>
        <label>Previous Hosting company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Acct Plans (Previous Hosting company)</relationshipLabel>
        <relationshipName>R00N50000001oQ4NEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Strategy__c</fullName>
        <inlineHelpText>Did they have a Strategy for the last 6 – 12 months? What were major initiatives? Were they achieved?</inlineHelpText>
        <label>Previous Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Acct Plans (Primary Contact)</relationshipLabel>
        <relationshipName>Acct_Plans4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processor__c</fullName>
        <label>Processor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sales_Growth__c</fullName>
        <formula>IF ( Last_FY_Product_Sales__c = 0, 1 ,  (  Plan_FY_Product_Sales_Goal__c -  Last_FY_Product_Sales__c ) /  Last_FY_Product_Sales__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <picklist>
            <picklistValues>
                <fullName>SQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharepoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Products_Services__c</fullName>
        <inlineHelpText>What products services are they considering using in the upcoming fiscal year?</inlineHelpText>
        <label>Projected Products &amp; Services</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RAX_of_your_overall_IT_budget__c</fullName>
        <inlineHelpText>What percent is RAX of your overall IT budget?</inlineHelpText>
        <label>RAX % of your overall IT budget</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RAX_too_expensive__c</fullName>
        <inlineHelpText>Has your client notified you RAX is too expensive?</inlineHelpText>
        <label>RAX too expensive?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RS_Web_Presence_and_Customer_Portal__c</fullName>
        <inlineHelpText>How does the websites assist in meeting business goals?</inlineHelpText>
        <label>RS Web Presence and Customer Portal</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rackspace_Products__c</fullName>
        <label>Rackspace Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rackspace_migration_help_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rackspace migration help needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>What is the reason for this Strategy Workshop?</inlineHelpText>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Overview__c</fullName>
        <label>Relationship Overview</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk_Details__c</fullName>
        <label>Risk Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Reason__c</fullName>
        <label>Risk Reason</label>
        <picklist>
            <controllingField>High_Risk_Customer__c</controllingField>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Hardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSA/SLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat Support Failures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Limitations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SE_Assigned__c</fullName>
        <label>SE Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Acct_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SaaS__c</fullName>
        <label>SaaS</label>
        <picklist>
            <picklistValues>
                <fullName>Hosted Email/Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VHD</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Services_Sales_Growth__c</fullName>
        <formula>IF (  Last_FY_Services_Sales__c = 0 , 1, (  Plan_FY_Services_Sales_Goal__c  -  Last_FY_Services_Sales__c  )  /  Last_FY_Services_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <inlineHelpText>How many servers are in each environment? Unix, Windows, Linux?</inlineHelpText>
        <label>Size</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strengths_to_Leverage__c</fullName>
        <label>Strengths to Leverage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <label>Support</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Technical_Account_Goals__c</fullName>
        <inlineHelpText>(i.e. optimize backup, migrate to W2K8, etc.)</inlineHelpText>
        <label>Technical Account Goals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Decision_Maker__c</fullName>
        <label>Technical Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Acct Plans (Technical Decision Maker)</relationshipLabel>
        <relationshipName>R00N50000001oQ4qEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Overview__c</fullName>
        <label>Technical Overview</label>
        <referenceTo>Technical_Overview__c</referenceTo>
        <relationshipLabel>Acct Plans</relationshipLabel>
        <relationshipName>R00N50000001oQFVEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technologies_focused_interested_in__c</fullName>
        <inlineHelpText>what technologies are you focused on/interested in?</inlineHelpText>
        <label>Technologies focused/interested in?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Aspects_of_Support__c</fullName>
        <label>Unique Aspects of Support</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unsat_Tickets__c</fullName>
        <label>Unsat Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upgrades__c</fullName>
        <inlineHelpText>Number of Upgrades per Year</inlineHelpText>
        <label>Upgrades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPN__c</fullName>
        <label>VPN</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Added_Services__c</fullName>
        <label>Value Added Services</label>
        <picklist>
            <picklistValues>
                <fullName>Data Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center Migration/Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce Compute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV to SaaS Enablement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Service Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission Critical Web Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security/Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage Design</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Verbatim__c</fullName>
        <label>Verbatim</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Verbatims_Mentions_Pricing__c</fullName>
        <label>Verbatims Mentions Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtualization_Assessment_Date__c</fullName>
        <label>Virtualization Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weighted_Total_Wallet__c</fullName>
        <label>Weighted Total % Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>What_are_we_hosting_for_this_customer__c</fullName>
        <inlineHelpText>Examples: customer facing website, back office applications, customer portal, etc.</inlineHelpText>
        <label>What are we hosting for this customer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_drives_decision_making__c</fullName>
        <inlineHelpText>Are they focused on cost, uptime, other?</inlineHelpText>
        <label>What drives decision making</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_your_budget__c</fullName>
        <label>What is your budget?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>When_have_we_saved_this_customer__c</fullName>
        <inlineHelpText>List times in customer’s history where we have gone above and beyond for them.</inlineHelpText>
        <label>When have we saved this customer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Who_are_the_customers_competitors__c</fullName>
        <label>Who are the customers competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_did_they_choose_us__c</fullName>
        <label>Why did they choose us</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Workshop_Scheduled_Date_Time__c</fullName>
        <label>Workshop Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Workshop_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workshop Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YOY_Budget__c</fullName>
        <inlineHelpText>Is your current year budget growing or shrinking over the previous year?</inlineHelpText>
        <label>YOY Budget</label>
        <picklist>
            <picklistValues>
                <fullName>Growing &gt; 10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growing 5% to 10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat to Growing 5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shrinking 5% to flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shrinking 5% to 10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shrinking &gt; 10%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Acct Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Acct_Num__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Acct Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acct Plans</pluralLabel>
    <recordTypes>
        <fullName>AE_Account_Plan</fullName>
        <active>true</active>
        <description>Account Executive Account Plan</description>
        <label>AE Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Plan</fullName>
        <active>true</active>
        <description>Account Manager Account Plan</description>
        <label>Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Emerging_MCR</fullName>
        <active>true</active>
        <description>Emerging - Managed Cloud Ready</description>
        <label>Emerging MCR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>